# HPC

Practical2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrix_product  matrix_product.cxx  max_subarray  max_subarray.cxx
Practical3-src/Heat/: CMakeLists.txt  common.cxx  common.h  functions.cxx  functions.h  kernel.cxx  kernel.h  main.cxx
Practical3-src/String/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cord  string_equation.cxx
